Fix positioning bugs with sticky banners, fixed article feed on small (#210)
* Fix positioning bugs with sticky banners, fixed article feed on small
devices.

* Update tests

--- a/src/components/escape/escape.css
+++ b/src/components/escape/escape.css
@@ -4,7 +4,7 @@
 }
 
 .homepage .escape {
-  top: 12%;
+  top: 9rem;
 }
 
 .escape-icon {
